--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- <script src="./node_modules/flyonui/flyonui.js" defer></script> -->
-  <title>api-forge</title>
+  <title>ForgeMockAPI</title>
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
-  <script src="./node_modules/flyonui/flyonui.js"></script>
+  <script src="./node_modules/flyonui/flyonui.js" type="module" defer></script>
 </body>
 
 </html>
